Fix input bug where user could enter game on whitespaces

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,6 +306,7 @@ input[type=text] {
 
     #question {
         font-size: 0.8rem;
+        margin-bottom: 3px;
     }
 
     .ans-btns {
